--- a/site/view/searchbanner.html
+++ b/site/view/searchbanner.html
@@ -8,7 +8,7 @@
   <div class="col-sm-5">
     <form class="form-inline text-center" id="myForm{{banner.id}}" name="myForm{{banner.id}}" method="post" enctype="multipart/form-data">
       <input type="file" class="form-control" name="image" accept="image/*" id="pictureinput{{banner.id}}">
-      <button style="margin-left: 10px" type="button" ng-click="submit(banner.id)" class="btn btn-success">Salvar
+      <button style="margin-left: 10px" type="button" ng-click="submit(banner.id)" class="btn btn-default">Salvar
       </button>
     </form>
     <br>
@@ -18,11 +18,11 @@
     <br>
   </div>
   <div class="form-group text-center" style="margin-top: 50px">
-    <button type="button" class="btn btn-danger" ng-click="excluir(banner.id, $index)">
+    <button type="button" class="btn btn-default" ng-click="excluir(banner.id, $index)">
       Excluir
     </button>
   </div>
 </div>
 <div class="form-group">
-  <button type="button" class="btn btn-success" ng-click="salvar()">Novo banner</button>
+  <button type="button" class="btn btn-default" ng-click="salvar()">Novo banner</button>
 </div>
